--- a/Aplikacja_weekondowa/Aplikacja_weekondowa.csproj
+++ b/Aplikacja_weekondowa/Aplikacja_weekondowa.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="moje_funkcje.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
