--- a/Aplikacja_weekondowa/Aplikacja_weekondowa.csproj
+++ b/Aplikacja_weekondowa/Aplikacja_weekondowa.csproj
@@ -49,6 +49,7 @@
     <Compile Include="prezentacja_danych.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sterowanie_przeplywem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
